chore: add thundermans/index.html

--- a/thundermans/index.html
+++ b/thundermans/index.html
@@ -2,159 +2,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Thundermans: Tu tienda de cómics favorita con una amplia variedad de títulos y productos.">
-    <link rel="canonical" href="https://thundermans.com">
-    <meta property="og:title" content="Thundermans">
-    <meta property="og:description" content="La mejor tienda de cómics.">
+    <meta name="description" content="Descubre la tradición de los Mazapanes Merkuria, sabores únicos y artesanales.">
+    <link rel="canonical" href="https://www.merkuriamazapanes.com">
+    <meta property="og:title" content="Merkuria Mazapanes">
+    <meta property="og:description" content="Deléitate con nuestros mazapanes artesanales.">
     <meta property="og:image" content="placeholder-image-url">
-    <meta property="og:url" content="https://thundermans.com">
-    <title>Thundermans</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <meta property="og:url" content="https://www.merkuriamazapanes.com">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Merkuria Mazapanes">
+    <meta name="twitter:description" content="Deléitate con nuestros mazapanes artesanales.">
+    <meta name="twitter:image" content="placeholder-image-url">
+    <title>thundermans</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     
 
   <link rel="stylesheet" href="styles.css" /></head>
-<body class="bg-gray-100">
+<body class="bg-white text-gray-800">
     <header class="sticky top-0 bg-white shadow">
         <nav class="container mx-auto flex justify-between items-center p-4">
-            <h1 class="text-3xl font-bold text-red-600">Thundermans</h1>
-            <a href="#contact" class="bg-red-600 text-white px-4 py-2 rounded shadow">Contáctanos</a>
+            <h1 class="text-xl font-bold">Merkuria Mazapanes</h1>
+            <a href="#contact" class="bg-brown-500 text-white px-4 py-2 rounded">Contáctanos</a>
         </nav>
     </header>
     <main>
-        <section class="hero py-20 text-center text-white">
-            <div class="container mx-auto">
-                <h2 class="text-5xl font-extrabold">¡Bienvenido a Thundermans!</h2>
-                <p class="mt-4 text-xl">Tu destino para todos los cómics que amas.</p>
-                <a href="#products" class="mt-6 inline-block bg-white text-red-600 px-6 py-3 rounded shadow">Explora Nuestros Cómics</a>
+        <section class="hero text-center py-20">
+            <h2 class="text-4xl font-bold mb-2">Sabor Tradicional</h2>
+            <p class="mb-6">Descubre la historia de nuestros mazapanes artesanales.</p>
+            <div class="flex justify-center space-x-4">
+                <a href="#flavors" class="bg-brown-500 text-white px-6 py-2 rounded">Ver Sabores</a>
+                <a href="#ingredients" class="bg-gray-300 text-gray-800 px-6 py-2 rounded">Ingredientes</a>
             </div>
         </section>
-        <section id="products" class="py-16">
-            <div class="container mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
-                <div class="card bg-white rounded-lg p-6 shadow">
-<img src="https://images.pexels.com/photos/7709273/pexels-photo-7709273.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Imagen ilustrativa 1: Crea un landing page para una tienda de comics llamado Thundermans, los títulos con letras de comics, usa una paleta de colores agradable a la vista y relacionado con comics, un hero section para poner una foto de comics, pequeña descripción, un formulario de contacto, incluye ubicación, usa cartas redondas con sombras ligeras, agregar tags de Facebook." loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
+        <section id="flavors" class="container mx-auto py-10">
+            <h3 class="text-2xl font-semibold mb-4">Nuestros Sabores</h3>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                <div class="card bg-white rounded-lg shadow-lg p-4">
+<img src="https://images.pexels.com/photos/5847003/pexels-photo-5847003.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Imagen ilustrativa 1: Crea una landing page refinada, para mostrar Merkuria Mazapanes. Usa un color cafe claro, con paleta de colores neutrales para una vista limpia y artesanal. Hero section con foto de calidad del producto, pequeña descripcion sobre la historia de los mazapanes, mostrar sabores (clásico, chocolate, cajeta, pistache) , Incluye secciónenles de ingredientes, incluye testimonios, incluye información de ubicación, de contacto, una formulario de contacto. Usa cartas redondas con sombras ligeras. La tipografía debe ser elegante. Optimizado para uso movil. Agregar tags de Twitter, Facebook e instagram" loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
 
-                    <h3 class="text-xl font-bold">Cómic 1</h3>
-                    <ul class="mt-2">
-                        <li>Descripción breve 1</li>
-                        <li>Descripción breve 2</li>
-                        <li>Descripción breve 3</li>
-                    </ul>
-                    <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded">Comprar</a>
+                    <h4 class="font-bold">Clásico</h4>
+                    <p>Delicioso mazapán tradicional.</p>
                 </div>
-                <div class="card bg-white rounded-lg p-6 shadow">
-<img src="https://images.pexels.com/photos/7886232/pexels-photo-7886232.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Imagen ilustrativa 2: Crea un landing page para una tienda de comics llamado Thundermans, los títulos con letras de comics, usa una paleta de colores agradable a la vista y relacionado con comics, un hero section para poner una foto de comics, pequeña descripción, un formulario de contacto, incluye ubicación, usa cartas redondas con sombras ligeras, agregar tags de Facebook." loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
+                <div class="card bg-white rounded-lg shadow-lg p-4">
+<img src="https://images.pexels.com/photos/18452834/pexels-photo-18452834.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Imagen ilustrativa 2: Crea una landing page refinada, para mostrar Merkuria Mazapanes. Usa un color cafe claro, con paleta de colores neutrales para una vista limpia y artesanal. Hero section con foto de calidad del producto, pequeña descripcion sobre la historia de los mazapanes, mostrar sabores (clásico, chocolate, cajeta, pistache) , Incluye secciónenles de ingredientes, incluye testimonios, incluye información de ubicación, de contacto, una formulario de contacto. Usa cartas redondas con sombras ligeras. La tipografía debe ser elegante. Optimizado para uso movil. Agregar tags de Twitter, Facebook e instagram" loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
 
-                    <h3 class="text-xl font-bold">Cómic 2</h3>
-                    <ul class="mt-2">
-                        <li>Descripción breve 1</li>
-                        <li>Descripción breve 2</li>
-                        <li>Descripción breve 3</li>
-                    </ul>
-                    <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded">Comprar</a>
+                    <h4 class="font-bold">Chocolate</h4>
+                    <p>Un toque de chocolate irresistible.</p>
                 </div>
-                <div class="card bg-white rounded-lg p-6 shadow">
-<img src="https://images.pexels.com/photos/265152/pexels-photo-265152.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Imagen ilustrativa 3: Crea un landing page para una tienda de comics llamado Thundermans, los títulos con letras de comics, usa una paleta de colores agradable a la vista y relacionado con comics, un hero section para poner una foto de comics, pequeña descripción, un formulario de contacto, incluye ubicación, usa cartas redondas con sombras ligeras, agregar tags de Facebook." loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
+                <div class="card bg-white rounded-lg shadow-lg p-4">
+<img src="https://images.pexels.com/photos/2998945/pexels-photo-2998945.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Imagen ilustrativa 3: Crea una landing page refinada, para mostrar Merkuria Mazapanes. Usa un color cafe claro, con paleta de colores neutrales para una vista limpia y artesanal. Hero section con foto de calidad del producto, pequeña descripcion sobre la historia de los mazapanes, mostrar sabores (clásico, chocolate, cajeta, pistache) , Incluye secciónenles de ingredientes, incluye testimonios, incluye información de ubicación, de contacto, una formulario de contacto. Usa cartas redondas con sombras ligeras. La tipografía debe ser elegante. Optimizado para uso movil. Agregar tags de Twitter, Facebook e instagram" loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
 
-                    <h3 class="text-xl font-bold">Cómic 3</h3>
-                    <ul class="mt-2">
-                        <li>Descripción breve 1</li>
-                        <li>Descripción breve 2</li>
-                        <li>Descripción breve 3</li>
-                    </ul>
-                    <a href="#" class="mt-4 inline-block bg-red-600 text-white px-4 py-2 rounded">Comprar</a>
+                    <h4 class="font-bold">Cajeta</h4>
+                    <p>El sabor dulce de la cajeta.</p>
+                </div>
+                <div class="card bg-white rounded-lg shadow-lg p-4">
+                    <h4 class="font-bold">Pistache</h4>
+                    <p>Exquisito sabor a pistache.</p>
                 </div>
             </div>
         </section>
-        <section class="py-16 bg-gray-200">
-            <div class="container mx-auto">
-                <h2 class="text-3xl font-bold text-center">Nuestros Beneficios</h2>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-8">
-                    <div class="bg-white rounded-lg p-6 shadow">
-                        <div class="flex items-center">
-                            <svg class="w-8 h-8 text-red-600" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0C5.373 0 0 5.373 0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0zm0 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-1-15h2v6h-2zm0 8h2v2h-2z"/></svg>
-                            <h3 class="ml-4 text-xl font-bold">Beneficio 1</h3>
-                        </div>
-                        <p class="mt-2">Descripción breve del beneficio 1.</p>
-                    </div>
-                    <div class="bg-white rounded-lg p-6 shadow">
-                        <div class="flex items-center">
-                            <svg class="w-8 h-8 text-red-600" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0C5.373 0 0 5.373 0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0zm0 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-1-15h2v6h-2zm0 8h2v2h-2z"/></svg>
-                            <h3 class="ml-4 text-xl font-bold">Beneficio 2</h3>
-                        </div>
-                        <p class="mt-2">Descripción breve del beneficio 2.</p>
-                    </div>
-                    <div class="bg-white rounded-lg p-6 shadow">
-                        <div class="flex items-center">
-                            <svg class="w-8 h-8 text-red-600" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0C5.373 0 0 5.373 0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0zm0 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm-1-15h2v6h-2zm0 8h2v2h-2z"/></svg>
-                            <h3 class="ml-4 text-xl font-bold">Beneficio 3</h3>
-                        </div>
-                        <p class="mt-2">Descripción breve del beneficio 3.</p>
-                    </div>
-                </div>
-            </div>
+        <section id="ingredients" class="container mx-auto py-10">
+            <h3 class="text-2xl font-semibold mb-4">Ingredientes</h3>
+            <p>Utilizamos ingredientes de la más alta calidad para ofrecerte un producto excepcional.</p>
         </section>
-        <section class="py-16">
-            <div class="container mx-auto">
-                <h2 class="text-3xl font-bold text-center">Nuestros Clientes</h2>
-                <div class="flex justify-center mt-8">
-                    <div class="bg-white rounded-lg p-4 shadow mx-2">Cliente 1</div>
-                    <div class="bg-white rounded-lg p-4 shadow mx-2">Cliente 2</div>
-                    <div class="bg-white rounded-lg p-4 shadow mx-2">Cliente 3</div>
-                </div>
-            </div>
+        <section id="testimonials" class="container mx-auto py-10">
+            <h3 class="text-2xl font-semibold mb-4">Testimonios</h3>
+            <blockquote class="bg-gray-100 p-4 rounded">
+                <p>"Los mejores mazapanes que he probado!" - Cliente Satisfecho</p>
+            </blockquote>
         </section>
-        <section id="contact" class="py-16 bg-gray-200">
-            <div class="container mx-auto">
-                <h2 class="text-3xl font-bold text-center">Contáctanos</h2>
-                <form class="mt-8 max-w-md mx-auto">
-                    <label class="block mb-2" for="name">Nombre:</label>
-                    <input class="w-full p-2 border border-gray-300 rounded" type="text" id="name" required aria-label="Nombre">
-                    <label class="block mt-4 mb-2" for="email">Correo Electrónico:</label>
-                    <input class="w-full p-2 border border-gray-300 rounded" type="email" id="email" required aria-label="Correo Electrónico">
-                    <label class="block mt-4 mb-2" for="phone">Teléfono:</label>
-                    <input class="w-full p-2 border border-gray-300 rounded" type="tel" id="phone" required aria-label="Teléfono">
-                    <label class="block mt-4 mb-2" for="select">Selecciona un tema:</label>
-                    <select class="w-full p-2 border border-gray-300 rounded" id="select" aria-label="Selecciona un tema">
-                        <option value="consulta">Consulta</option>
-                        <option value="sugerencia">Sugerencia</option>
-                    </select>
-                    <button type="submit" class="mt-6 w-full bg-red-600 text-white px-4 py-2 rounded">Enviar</button>
-                </form>
-            </div>
+        <section id="location" class="container mx-auto py-10">
+            <h3 class="text-2xl font-semibold mb-4">Ubicación</h3>
+            <p>📍 Calle Falsa 123, Ciudad</p>
+            <p>📞 (123) 456-7890</p>
+            <p>🕰️ Lunes a Viernes, 9 AM - 5 PM</p>
         </section>
-        <section class="py-16">
-            <h2 class="text-3xl font-bold text-center">Ubicación</h2>
-            <div class="container mx-auto text-center mt-8">
-                <p>📍 Calle Ficticia 123, Ciudad, País</p>
-                <p>📞 (123) 456-7890</p>
-                <p>🕰️ Lunes a Viernes: 10:00 - 18:00</p>
-            </div>
+        <section id="contact" class="container mx-auto py-10">
+            <h3 class="text-2xl font-semibold mb-4">Contáctanos</h3>
+            <form class="bg-gray-100 p-6 rounded" onsubmit="event.preventDefault(); console.log('Formulario enviado!');">
+                <label class="block mb-2" for="name">Nombre:</label>
+                <input class="w-full p-2 mb-4 border rounded" type="text" id="name" required>
+                <label class="block mb-2" for="email">Email:</label>
+                <input class="w-full p-2 mb-4 border rounded" type="email" id="email" required>
+                <label class="block mb-2" for="phone">Teléfono:</label>
+                <input class="w-full p-2 mb-4 border rounded" type="tel" id="phone" required>
+                <button class="bg-brown-500 text-white px-4 py-2 rounded w-full" type="submit">Enviar</button>
+            </form>
         </section>
     </main>
-    <footer class="bg-gray-800 text-white py-8">
-        <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
+    <footer class="bg-gray-800 text-white py-6">
+        <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-4">
             <div>
-                <h3 class="font-bold">Thundermans</h3>
-                <p>Tu tienda de cómics favorita.</p>
+                <h4 class="font-bold">Merkuria Mazapanes</h4>
+                <p>Tradición y sabor en cada bocado.</p>
             </div>
             <div>
-                <h3 class="font-bold">Información</h3>
+                <h4 class="font-bold">Información</h4>
                 <ul>
-                    <li><a href="#" class="text-gray-400">Sobre Nosotros</a></li>
-                    <li><a href="#" class="text-gray-400">Política de Privacidad</a></li>
+                    <li><a href="#flavors" class="text-gray-300 hover:underline">Sabores</a></li>
+                    <li><a href="#ingredients" class="text-gray-300 hover:underline">Ingredientes</a></li>
                 </ul>
             </div>
             <div>
-                <h3 class="font-bold">Contacto</h3>
-                <ul>
-                    <li><a href="#contact" class="text-gray-400">Contáctanos</a></li>
-                </ul>
+                <h4 class="font-bold">Contacto</h4>
+                <p>📞 (123) 456-7890</p>
             </div>
             <div>
-                <h3 class="font-bold">Redes Sociales</h3>
-                <div class="flex space-x-4">
-                    <a href="#" aria-label="Facebook"><svg class="w-6 h-6 text-gray-400" fill="currentColor" viewBox="0 0 24 24"><path d="M22.675 0h-21.35C.6 0 0 .6 0 1.325v21.35C0 23.4.6 24 1.325 24h21.35C23.4 24 24 23.4 24 22.675V1.325C24 .6 23.4 0 22.675 0zm-3.45 12.225h-3.025v10.575h-4.05V12.225h-2.25V9.675h2.25V7.875c0-3.225 1.925-5.025 4.75-5.025 1.35 0 2.5.1 2.5.1v2.875h-1.4c-1.1 0-1.45.675-1.45 1.375v1.5h2.875l-.475 2.55z"/></svg></a>
-                </div>
+                <h4 class="font-bold">Redes Sociales</h4>
+                <a href="#" class="text-gray-300 hover:underline">Facebook</a><br>
+                <a href="#" class="text-gray-300 hover:underline">Twitter</a><br>
+                <a href="#" class="text-gray-300 hover:underline">Instagram</a>
             </div>
         </div>
     </footer>
