--- a/thundermans/index.html
+++ b/thundermans/index.html
@@ -117,6 +117,8 @@
     
 
   <!-- Chatwoot -->
+
+    <elevenlabs-convai agent-id="agent_7701k9z2tveeehbr97q5rygpm6zn"></elevenlabs-convai><script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
   
 
   <script src="main.js"></script>
