--- a/rhino-test/index.html
+++ b/rhino-test/index.html
@@ -155,8 +155,10 @@
 
   <!-- Chatwoot -->
   
-
-  <script src="main.js"></script>
+  <script src="main.js">
+      window.nautoConsoleSettings = {"position":"left","type":"expanded_bubble","launcherTitle":"Chat with us "};
+  
+  </script>
 </body>
 
 </html>
