--- a/rhino-test/index.html
+++ b/rhino-test/index.html
@@ -171,8 +171,8 @@
     g.async = true;
     s.parentNode.insertBefore(g, s);
     g.onload = function () {
-      if (window.chatwootSDK) {
-        window.chatwootSDK.run({
+      if (window.nautoConsoleSDK) {
+        window.nautoConsoleSDK.run({
           websiteToken: "tKZckESgRozZCxUfsFZMPxgo",
           baseUrl: BASE_URL
         });
