--- a/cafe/index.html
+++ b/cafe/index.html
@@ -126,10 +126,22 @@
 
     
 
-  <!-- Chatwoot -->
-  
+<script>
+  (function(d,t) {
+    var BASE_URL="http://0.0.0.0:3000";
+    var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src=BASE_URL+"/packs/js/sdk.js";
+    g.async = true;
+    s.parentNode.insertBefore(g,s);
+    g.onload=function(){
+      window.nautoConsoleSDK.run({
+        websiteToken: 'NC2djJyq3ZykX41x1H59Lixb',
+        baseUrl: BASE_URL
+      })
+    }
+  })(document,"script");
+</script>
 
-  <script src="main.js"></script>
 </body>
 
 </html>
