--- a/cafe/index.html
+++ b/cafe/index.html
@@ -128,7 +128,7 @@
 
 <script>
   (function(d,t) {
-    var BASE_URL="http://0.0.0.0:3000";
+    var BASE_URL="https://fulgid-unisomeric-marylee.ngrok-free.dev";
     var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
     g.src=BASE_URL+"/packs/js/sdk.js";
     g.async = true;
