--- a/cafe/index.html
+++ b/cafe/index.html
@@ -128,7 +128,7 @@
 
 <script>
   (function(d,t) {
-    var BASE_URL="https://c45a-189-168-64-208.ngrok-free.app";
+    var BASE_URL="https://c45a-189-168-64-208.ngrok-free.app/vite-dev/";
     var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
     g.src=BASE_URL+"/packs/js/sdk.js";
     g.async = true;
