--- a/cafe/index.html
+++ b/cafe/index.html
@@ -127,19 +127,29 @@
     
 
 <script>
-  (function(d,t) {
+window.nautoConsoleSettings = {
+    position: "left",
+    type: "expanded_bubble",
+    launcherTitle: "Chat with us"
+  };
+
+  // 2️⃣ Chatwoot SDK loader
+  (function(d,t){
     var BASE_URL="https://c45a-189-168-64-208.ngrok-free.app";
-    var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    g.src=BASE_URL+"/packs/js/sdk.js";
+    var g = d.createElement(t),
+        s = d.getElementsByTagName(t)[0];
+    g.src = BASE_URL + "/packs/js/sdk.js";
     g.async = true;
-    s.parentNode.insertBefore(g,s);
-    g.onload=function(){
-      window.nautoConsoleSDK.run({
-        websiteToken: 'NC2djJyq3ZykX41x1H59Lixb',
-        baseUrl: BASE_URL
-      })
-    }
-  })(document,"script");
+    s.parentNode.insertBefore(g, s);
+    g.onload = function () {
+      if (window.nautoConsoleSDK) {
+        window.nautoConsoleSDK.run({
+          websiteToken: "tKZckESgRozZCxUfsFZMPxgo",
+          baseUrl: BASE_URL
+        });
+      }
+    };
+  })(document, "script");
 </script>
 
 </body>
