--- a/cafe/index.html
+++ b/cafe/index.html
@@ -135,7 +135,7 @@ window.nautoConsoleSettings = {
 
   // 2️⃣ Chatwoot SDK loader
   (function(d,t){
-    var BASE_URL="https://c45a-189-168-64-208.ngrok-free.app";
+    var BASE_URL="https://68f2950b52e5.ngrok-free.app";
     var g = d.createElement(t),
         s = d.getElementsByTagName(t)[0];
     g.src = BASE_URL + "/packs/js/sdk.js";
