--- a/starter/index.html
+++ b/starter/index.html
@@ -15,6 +15,21 @@
   <!-- Chatwoot -->
   
 
-  <script src="main.js"></script>
+  <script>
+  (function(d,t) {
+    var BASE_URL="http://0.0.0.0:3000";
+    var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src=BASE_URL+"/packs/js/sdk.js";
+    g.async = true;
+    s.parentNode.insertBefore(g,s);
+    g.onload=function(){
+      window.nautoConsoleSDK.run({
+        websiteToken: 'FYKYYMjHfHPKrWoDiTYKRUAA',
+        baseUrl: BASE_URL
+      })
+    }
+  })(document,"script");
+</script>
+
 </body>
 </html>
