--- a/starter/index.html
+++ b/starter/index.html
@@ -17,7 +17,7 @@
 
   <script>
   (function(d,t) {
-    var BASE_URL="http://0.0.0.0:3000";
+    var BASE_URL="https://1053-2806-103e-13-b386-543b-36bf-c4df-356e.ngrok-free.app";
     var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
     g.src=BASE_URL+"/packs/js/sdk.js";
     g.async = true;
